# statwalker

./: .gitignore  README.md  README.rst  bench.py  generate.py  git.py  push.py  requirements.txt  resolve.py  setup.py  statwalker.py  vendor.sh
.github/workflows/: ci.yml  version.yml
app/: package-lock.json  package.json
app/src/: app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/js/: util.js
app/src/routes/: +layout.svelte  +page.svelte
browser/: package-lock.json  package.json  svelte.config.js  vite.config.ts
browser/public/: index.html
browser/public/_app/: version.json
browser/public/_app/immutable/: bundle.Bm3OpwAB.js  bundle.CyQs9Z7U.js  bundle.DzRuIPia.js
browser/public/_app/immutable/assets/: 0.BOuANhyj.css  0.CgiCBOXL.css  0.CqG92XhM.css  0.DnEgmv27.css  0.ltb8yjC5.css  0.uHGaTb5G.css  2.DbUWLMdG.css  2.IAegqA4M.css  2.R-NvUr79.css  style.Cdp4vvd5.css  style.CoQXv_Ve.css  style.DXI3JRwB.css  style.DY4B2Pcv.css
browser/public/_app/immutable/chunks/: 3monJsr1.js  3monJsr1.js.map  5pz18bYH.js  5pz18bYH.js.map  B-t0Odm8.js  B-t0Odm8.js.map  B5WrPElS.js  B5WrPElS.js.map  BHfBZ93M.js  BHfBZ93M.js.map  BQ9qYneo.js  BQ9qYneo.js.map  BcG2KNFs.js  BcG2KNFs.js.map  BkyzNuE5.js  Bq7AA_LH.js  Bq7AA_LH.js.map  Bqnsw6b0.js  Bqnsw6b0.js.map  Bz4faya2.js  Bz4faya2.js.map  Bzak7iHL.js  Bzak7iHL.js.map  CIPqIZ-G.js  CIPqIZ-G.js.map  CV8kcCkA.js  CV8kcCkA.js.map  CXUUFbzq.js  CXUUFbzq.js.map  CZTrrgyc.js  CZTrrgyc.js.map  CbcBQ_vm.js  CbcBQ_vm.js.map  Cvx2dFXJ.js  Cvx2dFXJ.js.map  D-hNZjeA.js  D-hNZjeA.js.map  D22zCRQs.js  D22zCRQs.js.map  DJBZvoFV.js  (+21 more)
browser/public/_app/immutable/entry/: app.CyYowsbD.js  app.CyYowsbD.js.map  app.D0vSJ9XX.js  app.D0vSJ9XX.js.map  app.DBDPYni2.js  app.DBDPYni2.js.map  app.DpJko2WD.js  app.DpJko2WD.js.map  app.kfRjH5z6.js  app.ruQJuMoS.js  app.ruQJuMoS.js.map  start.BmKcn7Ax.js  (+10 more)
browser/src/: app.css  app.html
browser/src/js/: api.svelte.ts  store.svelte.ts
browser/src/lib/: Login.svelte  PickerButton.svelte  PickerIndicator.svelte  PickerWrapper.svelte  TreeMap.svelte
browser/src/routes/: +layout.svelte  +page.svelte
browser/src/ts/: api.svelte.ts  cache.ts  store.svelte.ts  util.ts
desktop/: package-lock.json  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/routes/: +layout.svelte
doc/: aggregate.md  resolve.md  serve.md  walk.md  white_paper.md
public/: index.html
public/_app/: version.json
public/_app/immutable/assets/: 0.W1016Iys.css  2.CqGWqzak.css
public/_app/immutable/chunks/: C-RzDlZe.js  GH4VR5cO.js  cZpsAJDa.js  svf7RUyD.js
public/_app/immutable/entry/: app.BirwkhRM.js  app.BjhQ4fqy.js  app.BnRH61V0.js  start.BB5uSfZJ.js  start.BRcwn_P2.js  start.BsULC58O.js
public/_app/immutable/nodes/: 0.BTa6VNYo.js  1.BBa0GTDw.js  1.C2T_BBon.js  1.CP0kVLac.js  2.BwqYJHXO.js  2.CNafaPd7.js  2.DzeH8_pN.js
python/: redis_db.py  setup.py
python/statwalker/: getsid.py  statwalker.py
rs/: Cargo.toml  Release.toml  build.rs
rs/src/: auth.rs  lib.rs  main.rs  storage.rs  util.rs
rs2/: Cargo.toml
rs2/src/: main.rs
statwalker/: getsid.py  statwalker.py
web/: Cargo.toml
web/public/: index.html
web/public/_app/: version.json
web/public/_app/immutable/assets/: 0.C5gNUz6V.css  0.CRXPsLK0.css  0.Dz0K8CjX.css
web/public/_app/immutable/chunks/: BJF-hzWP.js  BJVHLwmR.js  BfPj2Rha.js  DFK_xX9T.js  DMJYy8de.js  DZ0xuKtM.js  DfYykhIn.js  DlSRMPzA.js
web/public/_app/immutable/entry/: app.CraDCdcZ.js  app.ON_TK7MQ.js  app.YK4PTmkK.js  start.C-sYrVrc.js  start.CFIkEGlG.js  start.agv10Bvl.js
web/public/_app/immutable/nodes/: 0.BmniosSm.js  1.B2qHBp6z.js  1.CzmqUr1D.js  1.dJHrDpVn.js  2.BA8MqRqz.js  2.BgHWyjSb.js  2.DCD08Arv.js
web/src/: main.rs
(+33 files in other folders)
