[package]
name = "statwalker"
version = "2.0.0"
edition = "2024"

[dependencies]
crossbeam = "0.8"
itoa = "1"
atoi = "2"
num_cpus = "1.17"
clap = { version = "4.5", features = ["derive", "env", "color"] }
csv = "1.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
memchr = "2.7"
axum = { version = "0.8.4", features = ["macros", "json"] }   # ← bumped
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors","fs"] } 
colored = "3.0.0"
tempfile = "3.22.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Enable ANSI for Windows consoles
[target.'cfg(windows)'.dependencies]
anstyle-wincon = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
# opt-level = 3
