[package]
name = "statwalker"
version = "2.0.0"
edition = "2024"

[dependencies]
itoa = "1"
atoi = "2"
csv = "1.3"
anyhow = "1"
num_cpus = "1.17"
memchr = "2.7"
colored = "3.0.0"
tempfile = "3.22.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
clap = { version = "4.5", features = ["derive", "env", "color"] }
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "json"] } 
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors","fs"] } 
jsonwebtoken = "9.3.1"
serial_test = "3"
serde_json = "1"
zstd = "0.13.3"


[target.'cfg(unix)'.dependencies]
libc = "0.2"

# [target.'cfg(target_os = "macos")'.dependencies]


# Enable ANSI for Windows consoles
# [target.'cfg(windows)'.dependencies]
# anstyle-wincon = "3"

# [profile.release]
# lto = "thin"
# codegen-units = 1
# panic = "abort"

