[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.4", features = ["macros", "json"] }   # ← bumped
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
libc = "0.2"
tower-http = { version = "0.6", features = ["cors","fs"] }          # ← keep current; 0.6 works fine with axum 0.8
chrono = { version = "0.4", default-features = false, features = ["clock"] }
